doc/kustomize/030-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    k8s-app: jitsi
  name: jitsi
  namespace: jitsi
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      k8s-app: jitsi
  template:
    metadata:
      labels:
        k8s-app: jitsi
    spec:
      containers:


        - name: jicofo
          image: jitsi/jicofo:stable-5870
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: "250m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
        - name: prosody
          image: jitsi/prosody:stable-5870
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5222
            - containerPort: 5347
            - containerPort: 5280
          resources:
            requests:
              cpu: "50m"
              memory: "64Mi"
            limits:
              cpu: "100m"
              memory: "128Mi"
        - name: web
          image: jitsi/web:stable-5870
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
            - containerPort: 443
          resources:
            requests:
              cpu: "50m"
              memory: "64Mi"
            limits:
              cpu: "100m"
              memory: "128Mi"
        - name: jvb
          image: jitsi/jvb:stable-5870
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 4443
          resources:
            requests:
              cpu: "250m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
      serviceAccountName: jitsi
