doc/kustomize/060-prosody-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    service: prosody
  name: prosody
  namespace: jitsi
spec:
  ports:
  - name: "ws"
    port: 5280
    targetPort: 5280
  - name: "wss"
    port: 5281
    targetPort: 5281
  selector:
    k8s-app: jitsi
